<resources>
    <string name="app_name">profile</string>

    <!--创建角色-->
    <string name="profile_create_profile_skip">跳过</string>
    <string name="profile_create_profile_tip">角色创建中，请如实填写资料喔～</string>
    <string name="profile_create_profile_gender_tip">我的性别是</string>
    <string name="profile_create_profile_gender_tip2">*性别确认后无法修改</string>
    <string name="profile_create_profile_gender_male">男</string>
    <string name="profile_create_profile_gender_female">女</string>
    <string name="profile_create_profile_avatar_tip">上传头像</string>
    <string name="profile_create_profile_avatar_tip2">*建议使用真实头像</string>
    <string name="profile_create_profile_avatar_choose">选择头像</string>
    <string name="profile_create_profile_nick_tip">我的昵称是</string>
    <string name="profile_create_profile_nick_tip2">*注册后昵称可随时修改</string>
    <string name="profile_create_profile_nick_hint">我的昵称</string>
    <string name="profile_create_profile_nick_error">请填写合法的昵称</string>
    <string name="profile_create_profile_birth_tip">我的生日是</string>
    <string name="profile_create_profile_birth_tip2">*生日确认后无法修改</string>
    <string name="profile_create_profile_height_tip">我的身高是</string>
    <string name="profile_create_profile_city_tip">我常在的地点是</string>
    <string name="profile_create_confirm">确认</string>
    <string name="profile_create_profile_avatar_upload_failed">上传头像失败</string>
    <string name="profile_avatar_crop_title">剪裁头像</string>
    <string name="profile_avatar_crop_cancel">取消</string>
    <string name="profile_avatar_crop_ok">确认</string>
    <string name="profile_calendar_day">日</string>
    <string name="profile_calendar_month">月</string>
    <string name="profile_calendar_year">年</string>
    <string name="profile_height_cm">cm</string>

    <!--用户搜索-->
    <string name="search_cancel">取消</string>
    <string name="search_hint">输入用户ID</string>
    <string name="search_user_empty">世界线错乱啦，找不到此人～</string>

    <!--个人详情-->
    <string name="profile_detail_id">ID: %s</string>
    <string name="profile_detail_tags_none_tip">TA还未设置标签</string>
    <string name="profile_detail_intro_none_tip">TA太懒了，还没有填写简介</string>
    <string name="profile_detail_official_certify">官方认证: %s</string>
    <string name="profile_detail_identify_certify_none"><![CDATA[实名认证: (<font color=#A4AAB3>未认证</font>)]]></string>
    <string name="profile_detail_identify_certified">实名认证: (已认证)</string>
    <string name="profile_detail_edu_certify_none"><![CDATA[学历认证: (<font color=#A4AAB3>未认证</font>)]]></string>
    <string name="profile_detail_edu_certified">学历认证: (已认证)</string>
    <string name="profile_detail_pictures_title">展示墙</string>
    <string name="profile_detail_pictures_none_tip">TA还没有展示图片</string>
    <string name="profile_detail_timeline_title">动态(%d)</string>
    <string name="profile_detail_timeline_title_empty">动态</string>
    <string name="profile_detail_timeline_none">TA还没有发布动态</string>
    <string name="profile_detail_send_msg">发消息</string>
    <string name="profile_detail_follow_plus">关注 TA</string>
    <string name="profile_detail_relation_status_follow_both">互相关注</string>
    <string name="profile_detail_relation_status_follow_it">关注TA</string>
    <string name="profile_detail_relation_status_followed">已关注</string>

    <!--详情编辑-->
    <string name="profile_edit">资料编辑</string>
    <string name="profile_edit_save">保存</string>
    <string name="profile_edit_pictures_counts">展示图片 (%d/9)</string>
    <string name="profile_edit_pictures_hint">长按图片拖动排序</string>
    <string name="profile_edit_pictures_guide">快上传第一张图片吧</string>
    <string name="profile_edit_pictures_guide_tutor">教程范例</string>
    <string name="profile_edit_pictures_upload">上传</string>
    <string name="profile_edit_avatar">头像</string>
    <string name="profile_edit_gender">性别</string>
    <string name="profile_edit_gender_male">男</string>
    <string name="profile_edit_gender_female">男</string>
    <string name="profile_edit_gender_unknown">未知</string>
    <string name="profile_edit_birthday">生日</string>
    <string name="profile_edit_birthday_hint">生日</string>
    <string name="profile_edit_nick_name">昵称</string>
    <string name="profile_edit_nick_name_hint">你的昵称</string>
    <string name="profile_edit_height">身高</string>
    <string name="profile_edit_height_value">%d cm</string>
    <string name="profile_edit_height_hint">你的身高</string>
    <string name="profile_edit_edu">学历</string>
    <string name="profile_edit_edu_hint">你的学历</string>
    <string name="profile_edit_city">所在地</string>
    <string name="profile_edit_city_hint">常在的地区</string>
    <string name="profile_edit_industry">行业</string>
    <string name="profile_edit_industry_hint">工作行业</string>
    <string name="profile_edit_income">月收入</string>
    <string name="profile_edit_income_hint">工作收入</string>
    <string name="profile_edit_intro">自述</string>
    <string name="profile_edit_intro_hint">未填写</string>
    <string name="profile_edit_tags">我的关键词</string>
    <string name="profile_edit_tags_hint">未添加</string>
    <string name="profile_edit_alert_message">如需修改请联系客服</string>
    <string name="profile_edit_tags_count">当前标签(%d / 6)</string>
    <string name="profile_edit_tags_max_tip">最多只能添加 6 个关键词</string>
    <string name="profile_edit_crop_failed">图片剪裁失败</string>
    <string name="profile_edit_save_success">资料修改成功</string>
    <string name="profile_edit_save_failed">资料修改失败</string>

    <!--首页'我的'-->
    <string name="profile_home_mine_title">我的主页</string>
    <string name="profile_home_mine_official_certify">官方认证: %s</string>
    <string name="profile_home_mine_not_certify">( 未认证 )</string>
    <string name="profile_home_mine_id">ID: %d</string>
    <string name="profile_home_mine_name_certify">实名认证</string>
    <string name="profile_home_mine_edu_certify">学历认证</string>
    <string name="profile_home_mine_timeline_title">动态</string>
    <string name="profile_home_mine_follow_title">我关注的</string>
    <string name="profile_home_mine_fans_count">关注我的</string>
    <string name="profile_home_mine_edit">资料编辑</string>
    <string name="profile_home_mine_share">去安利</string>
    <string name="profile_home_mine_blacklist">黑名单</string>
    <string name="profile_home_mine_feedback">问题反馈</string>
    <string name="profile_home_mine_settings">设置</string>
    <string name="profile_home_mine_share_website">https://dokiwa.com/</string>
    <string name="profile_home_mine_share_title">DokiDoki - 泛二次元脱单交友平台</string>
    <string name="profile_home_mine_share_content">推荐你一款好用的二次元向社交软件，脱单找对象就靠TA啦</string>

    <!--认证-->
    <string name="profile_certify_mine">我的认证</string>
    <string name="profile_certify_todo">去认证</string>
    <string name="profile_certify_not_available">未认证</string>
    <string name="profile_certify_identify_title">实名认证</string>
    <string name="profile_certify_ing">认证中</string>
    <string name="profile_certify_identify_first">请先完成实名认证</string>
    <string name="profile_certify_edu_title">学历认证</string>

    <string name="profile_certify_id_certify_tip">请如实填写本人信息，否则驳回</string>
    <string name="profile_certify_id_certify_id_title">身份证号</string>
    <string name="profile_certify_id_certify_id_hint">身份证号码</string>
    <string name="profile_certify_id_certify_name_hint">身份证上的名字</string>
    <string name="profile_certify_id_certify_name_title">姓名</string>
    <string name="profile_certify_id_certify_zhima_tip">提交成功后，进入芝麻认证服务</string>
    <string name="profile_certify_id_certify_zhima_success">实名认证成功</string>

    <string name="profile_certify_edu_certify_name"><![CDATA[<font color=#FF3264>*</font> 姓名]]></string>
    <string name="profile_certify_edu_certify_number">证书编号</string>
    <string name="profile_certify_edu_certify_education"><![CDATA[<font color=#FF3264>*</font> 认证学历]]></string>
    <string name="profile_certify_edu_certify_year"><![CDATA[<font color=#FF3264>*</font> 毕业时间]]></string>
    <string name="profile_certify_edu_certify_school"><![CDATA[<font color=#FF3264>*</font> 认证学校]]></string>
    <string name="profile_certify_edu_certify_name_hint">学历证书上的名字</string>
    <string name="profile_certify_edu_certify_number_hint">学历证书编号(如有)</string>
    <string name="profile_certify_edu_certify_education_hint">请选择你的学历</string>
    <string name="profile_certify_edu_certify_year_hint">请选择你的毕业时间</string>
    <string name="profile_certify_edu_certify_school_hint">与证书保持一致</string>
    <string name="profile_certify_edu_certify_image">上传证书</string>
    <string name="profile_certify_edu_certify_image_choose">选择证书</string>
    <string name="profile_certify_edu_certify_image_tip">照片需要清晰可见，严禁 ps 处理</string>
    <string name="profile_certify_edu_certify_tip">
        1、若是国内学历请提供毕业证书编号，通常为18位，不知道的可咨询发证学校\n2、若是国外学历请提供学历认证编号，教留服认后的内容，例如：美[2018]00001，[]可用其他符号或者空格代替，务必前后区分开来。
    </string>
    <string name="profile_certify_submitted">已经提交审核</string>

    <!--设置-->
    <string name="profile_setting">设置</string>
    <string name="profile_setting_message_notify">消息通知</string>
    <string name="profile_setting_message_notify_tip">开启或关闭推送通知</string>
    <string name="profile_setting_sound">声音</string>
    <string name="profile_setting_vibration">振动</string>
    <string name="profile_setting_sound_vibration_tip">使用 DokiDoki 时获取新消息的声音和震动设置</string>
    <string name="profile_setting_feed_recommend">允许首页推荐</string>
    <string name="profile_setting_receive_message_certify_only">只接受实名用户消息</string>
    <string name="profile_setting_phone">手机号</string>
    <string name="profile_setting_wechat">微信</string>
    <string name="profile_setting_weibo">微博</string>
    <string name="profile_setting_qq">QQ</string>
    <string name="profile_setting_clear_cache">清除缓存</string>
    <string name="profile_setting_logout">退出登录</string>
    <string name="profile_setting_version">v%1$s(%2$d)</string>
    <string name="profile_setting_alert_title_change_phone_num">是否更改绑定手机号</string>
    <string name="profile_setting_alert_msg_change_phone_num">当前绑定手机号为 %s</string>
    <string name="profile_setting_bound">已绑定</string>
    <string name="profile_setting_unbound">未绑定</string>
    <string name="profile_setting_bind_success">绑定成功</string>
    <string name="profile_setting_bind_failed">绑定失败</string>
    <string name="profile_setting_unbind_success">解绑成功</string>
    <string name="profile_setting_unbind_failed">解绑失败</string>

</resources>
