<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.ProfileDetailActivity">

    <com.dokiwa.dokidoki.ui.view.AppToolBar
        android:id="@+id/toolBar"
        style="@style/AppToolBar.Icon.Left"
        android:background="@drawable/ui_bg_toolbar"
        android:elevation="@dimen/ui_toolbar_elevation"
        app:toolbar_titleText="@string/profile_certify_identify_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:text="@string/profile_certify_id_certify_tip"
        android:textSize="12sp"
        android:textColor="@color/dd_red"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_certify_id_certify_name_title"
            android:textColor="#333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_id_certify_name_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_certify_id_certify_id_title"
            android:textColor="#333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/idEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_id_certify_id_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/submitBtn"
            android:layout_margin="15dp"
            android:background="@drawable/ui_selector_bg_btn_gradient_red"
            android:enabled="false"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="44dp"/>

        <TextView
            android:text="@string/profile_certify_id_certify_zhima_tip"
            android:textSize="12sp"
            android:textColor="@color/text_tip"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>