<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tip1"
        android:text="@string/profile_create_profile_nick_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tip2"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="#FF333333"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tip2"
        app:layout_constraintLeft_toLeftOf="@+id/tip1"
        app:layout_constraintRight_toRightOf="@+id/tip1"
        app:layout_constraintTop_toBottomOf="@+id/tip1"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        android:layout_marginTop="10dp"
        android:text="@string/profile_create_profile_nick_tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#AEB3BA"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip2"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        android:layout_marginEnd="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="85dp"
        android:hint="@string/profile_create_profile_nick_hint"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/confirmBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_btn_round_border_red"
        android:text="@string/profile_create_confirm"
        android:textColor="@color/dd_red"
        android:layout_marginTop="120dp"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>