<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.ProfileDetailActivity">

    <com.dokiwa.dokidoki.ui.view.AppToolBar
        android:id="@+id/toolBar"
        style="@style/AppToolBar.Icon.Left"
        android:background="@drawable/ui_bg_toolbar"
        android:elevation="@dimen/ui_toolbar_elevation"
        app:toolbar_titleText="@string/profile_certify_edu_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.dokiwa.dokidoki.ui.view.SpanTextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spanText="@string/profile_certify_edu_certify_name"
            android:textColor="#333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_edu_certify_name_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.dokiwa.dokidoki.ui.view.SpanTextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spanText="@string/profile_certify_edu_certify_number"
            android:textColor="#333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/numberEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_edu_certify_number_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/educationContainer"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:foreground="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UnusedAttribute">

        <com.dokiwa.dokidoki.ui.view.SpanTextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spanText="@string/profile_certify_edu_certify_education"
            android:textColor="#333"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/educationEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_edu_certify_education_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/yearContainer"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="1px"
        android:foreground="?selectableItemBackground"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UnusedAttribute">

        <com.dokiwa.dokidoki.ui.view.SpanTextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spanText="@string/profile_certify_edu_certify_year"
            android:textColor="#333"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/yearEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_edu_certify_year_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.dokiwa.dokidoki.ui.view.SpanTextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:spanText="@string/profile_certify_edu_certify_school"
            android:textColor="#333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/schoolEditText"
            android:layout_gravity="end|center_vertical"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:paddingStart="10dp"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:maxEms="30"
            android:minWidth="100dp"
            android:maxLength="20"
            android:textColor="#333"
            android:textColorHint="@color/profile_edit_text_hint"
            android:hint="@string/profile_certify_edu_certify_school_hint"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="1px"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginEnd="135dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15sp"
                android:textColor="@color/text_tip"
                android:text="@string/profile_certify_edu_certify_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/text_tip"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/profile_certify_edu_certify_image_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ui_ic_pictures_add"
            android:background="@drawable/ui_bg_pictures_add"
            android:layout_width="120dp"
            android:layout_height="85dp"/>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/submitBtn"
            android:layout_margin="15dp"
            android:background="@drawable/ui_selector_bg_btn_gradient_red"
            android:enabled="false"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="44dp"/>

    </LinearLayout>

</LinearLayout>