<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tip1"
        android:text="@string/profile_create_profile_gender_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tip2"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="#FF333333"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tip2"
        app:layout_constraintLeft_toLeftOf="@+id/tip1"
        app:layout_constraintRight_toRightOf="@+id/tip1"
        app:layout_constraintTop_toBottomOf="@+id/tip1"
        app:layout_constraintBottom_toTopOf="@+id/maleImage"
        android:layout_marginTop="10dp"
        android:text="@string/profile_create_profile_gender_tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#AEB3BA"
        android:textSize="12sp"
        />

    <ImageView
        android:id="@+id/maleImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip2"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintRight_toRightOf="@+id/femaleImage"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile_selector_gender_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/maleImage"
        app:layout_constraintLeft_toLeftOf="@+id/maleImage"
        app:layout_constraintRight_toRightOf="@+id/maleImage"
        android:layout_marginTop="8dp"
        android:textColor="#FFA4AAB3"
        android:text="@string/profile_create_profile_gender_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/femaleImage"
        app:layout_constraintTop_toTopOf="@+id/maleImage"
        app:layout_constraintBottom_toBottomOf="@+id/maleImage"
        app:layout_constraintLeft_toLeftOf="@+id/maleImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="30dp"
        android:src="@drawable/profile_selector_gender_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/femaleImage"
        app:layout_constraintLeft_toLeftOf="@+id/femaleImage"
        app:layout_constraintRight_toRightOf="@+id/femaleImage"
        android:layout_marginTop="8dp"
        android:textColor="#FFA4AAB3"
        android:text="@string/profile_create_profile_gender_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/confirmBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/ui_bg_btn_round_border_red"
        android:text="@string/profile_create_confirm"
        tools:visibility="visible"
        android:visibility="invisible"
        android:textColor="@color/dd_red"
        android:layout_marginTop="120dp"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>